apps/web/e2e_final_test.log

> web@0.1.0 test:e2e
> playwright test

Fixtures "authenticatedPage" -> "page" -> "authenticatedPage" form a dependency cycle: tests-e2e/test-utils.ts:7:30 -> tests-e2e/save-draft.spec.ts:10:23 -> tests-e2e/test-utils.ts:7:30

   at test-utils.ts:7

   5 |  */
   6 | // eslint-disable-next-line react-hooks/rules-of-hooks
>  7 | export const test = baseTest.extend<{
     |                              ^
   8 |   authenticatedPage: Page;
   9 | }>({
  10 |   authenticatedPage: async ({ page }, use) => {

SyntaxError: /home/spa/tobit-spa-ai/apps/web/tests-e2e/u3_editor_publish_preview.spec.ts: Unexpected token (426:0)

  424 |       // Alternative: try to move using keyboard
  425 |       await page.keyboard.press('ArrowDown');
> 426 |
      | ^

   at u3_editor_publish_preview.spec.ts:426

  424 |       // Alternative: try to move using keyboard
  425 |       await page.keyboard.press('ArrowDown');
> 426 |

[1A[2K